--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ typings/
 .env.test.local
 .env.production.local
 .env.local
-
+.env.production
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
